# open_pii_filter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  admin_audit.py  admin_blocklist.py  admin_stats.py  dashboard.py  dashboard_test_runtime.py  detect.py  feedback.py  health.py  jobs.py  legal.py  metrics.py  responses.py  schemas.py
app/cli/: __init__.py  __main__.py  apikey.py  main.py
app/core/: __init__.py  analyzer.py  analyzer_cache.py  api_ip_caller_cache.py  blocklist_cache.py  checksum.py  codes.py  entity_labels.py  exception_ip_cache.py  policies.py  policy_engine.py  recognizer_overrides.py  system_settings.py
app/core/recognizers/: __init__.py  deny_list.py  kr_bank_account.py  kr_business_num.py  kr_driver_license.py  kr_passport.py  kr_phone.py  kr_rrn.py
app/db/: __init__.py  crud.py  models.py  session.py
app/db/migrations/: env.py
app/extractors/: __init__.py  clamav.py  dispatcher.py  docx.py  fetcher.py  hwpx.py  ocr.py  ocr_paddle.py  ocr_vlm.py  pdf.py  pptx.py  xlsx.py
app/security/: __init__.py  api_key.py  audit.py  audit_middleware.py  auth.py  body_size.py  encryption.py  hmac_auth.py  idempotency.py  ip_allowlist.py  log_filter.py  metrics_collector.py  poc_logger.py  rate_limit.py
app/templates/admin/: api_callers.html  audit.html  audit_detail.html  base.html  (+11 more)
app/workers/: __init__.py  attachment_processor.py  audit_cleanup.py  feedback_alerter.py  job_cleanup.py  nonce_vacuum.py  webhook_sender.py
deploy/: Dockerfile  docker-compose.yml  nginx.conf  prometheus_alerts.yml
docs/: api_integration.md  data_flow.md  installation.md  load_test_report.md  operations.md  phase_2_completion.md  phase_3_completion.md  phase_4_completion.md  phase_4b_attachment_test_spec.md  phase_5_completion.md  phase_6_completion.md  phase_7_completion.md  phase_8_completion.md  privacy_notice.md  security_scan_report.md  system_architecture.md  test_catalog.md
scripts/: check_test_prereqs.py  manage_keys.py
tests/: conftest.py
tests/fixtures/: checksum.py  synthetic_pii_generator.py
tests/integration/: test_admin_blocklist_api.py  test_attachment_pipeline_e2e.py  test_attachment_policy_phase4b.py  test_auth_hmac.py  test_body_size_limit.py  test_callback_delete.py  test_dashboard_attachment_toggle.py  test_db_crud.py  test_deny_list_particle.py  test_deny_list_recognizer.py  test_exception_ip_audit_only.py  test_health_legal_jobs.py  test_idempotency_e2e.py  test_ip_allowlist.py  test_ip_burst_throttle.py  test_kr_pii_end_to_end.py  test_load_smoke.py  test_paddle_ocr_pipeline.py  test_phase4_case_c.py  test_phase4_extractors.py  test_phase5_ocr.py  test_phase5_scan_pdf.py  test_phase6_audit.py  test_phase6_logs_no_pii.py  test_phase6_response_no_plaintext.py  test_phase6_ttl.py  test_phase7_alerter.py  test_phase7_feedback.py  test_phase7_policies.py  test_phase7_privacy_notice.py  test_phase7_stats.py  test_phase8_e2e.py  test_phase8_failure_modes.py  test_phase8_metrics.py  test_poc_shadow_mode.py  test_rate_limit.py  test_request_validation_codes.py  test_strictness_and_multi_pii.py
tests/load/: README.md  __init__.py  asgi_smoke.py  locustfile.py
tests/unit/: test_admin_permission_boundary.py  test_analyzer.py  test_attachment_policy_boundary.py  test_blocklist_cache.py  test_checksum_boundary.py  test_codes.py  test_config.py  test_config_dedup_encryption_boundary.py  test_dedup.py  test_detect.py  test_dispatcher_phase4b.py  test_encryption.py  test_entity_labels.py  test_entity_labels_and_body_size.py  test_extract_pptx.py  test_extract_xlsx.py  test_healthz.py  test_hmac_idempotency_boundary.py  test_kr_bank_account_recognizer.py  test_kr_business_num_recognizer.py  test_kr_driver_license_recognizer.py  test_kr_passport_recognizer.py  test_kr_phone_boundary.py  test_kr_phone_recognizer.py  test_kr_rrn_boundary.py  test_kr_rrn_recognizer.py  test_log_filter_pii_scrub.py  test_metrics_collector.py  test_metrics_collector_boundary.py  test_poc_logger.py  test_policies.py  test_rate_limit_boundary.py  test_response_plaintext_leak.py  test_send_delete_request.py  test_strictness_boundary.py  test_synthetic_generator.py  test_user_message_kr.py  test_webhook_sender_retry.py
(+21 files in other folders)
