[project]
name = "pii-api"
version = "0.1.0"
description = "PII Detection & Masking API for 기관 bulletin board"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "기관" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # FastAPI `Form(...)` parsing requires python-multipart at runtime.
    "python-multipart>=0.0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "typer>=0.12",
    "redis>=5.0",
    # Phase 1 — PII analysis engine (Microsoft Presidio + spaCy tokenizer).
    "presidio-analyzer>=2.2.362",
    "spacy>=3.8",
    # Phase 4 — attachment text extraction
    "pypdfium2>=4.30",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    # Phase 4b — xlsx / pptx text extractors (MIT-licensed alternatives
    # to legacy OLE binaries, which the deny list rejects).
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "clamd>=1.0.2",
    "lxml>=5.0",
    "httpx>=0.27",
    # Phase 5 — image processing for OCR (PIL.Image, ImageOps).
    "pillow>=10.0",
    # Phase 6 — AES-256-GCM envelope encryption.
    "cryptography>=43.0",
    # NOTE: pyhwpx is Windows-only and cannot install on Linux.
    # HWP/HWPX support strategy is pending Phase-4 design decision.
    # Phase 8 — Prometheus exposition + counters/histograms (T8.4).
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "bandit[toml]>=1.8",
    "pre-commit>=4.0",
    # Phase 8 — load testing + dependency vuln scan (T8.2/T8.5).
    "locust>=2.30",
    "pip-audit>=2.7",
    # Phase 4b — synthetic PDF/scan-PDF generation in test fixtures.
    "reportlab>=4.0",
]
# Phase 5 — optional PaddleOCR engine. The default OCR engine is the
# internal VLM endpoint; install [ocr] only if you want to switch
# Settings.ocr_engine to "paddle".
ocr = [
    "paddleocr>=2.8",
    "paddlepaddle>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff ───────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "C4", "PTH", "RET",
    "ARG", "S", "ANN", "N", "RUF",
]
ignore = [
    "ANN401", # allow Any in limited places
    "S101",   # assert in tests
]

[tool.ruff.lint.per-file-ignores]
# S311 (non-crypto random) is intentional in synthetic fixture generation.
"tests/**" = ["S101", "S311", "ANN", "ARG"]
# Alembic env.py + auto-generated migration scripts have framework-defined
# signatures and don't follow project style.
"app/db/migrations/**" = ["ANN", "ARG", "D", "E501", "I001", "RUF", "UP", "W"]

# ── Mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_unimported = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["app.db.migrations.*"]
ignore_errors = true

# ── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: long-running performance/load tests (run with -m slow)",
]

# ── Bandit ─────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
# B101: assert in non-test code is fine here.
# B104/B105: this codebase already annotates each false positive with
# `# noqa: S104/S105` explaining intent (sentinel "0.0.0.0", verdict
# enum labels like "PASS", response codes like "OK-0000", a Lua
# script body). Real secrets are loaded via pydantic-settings env
# vars, never hardcoded.
skips = ["B101", "B104", "B105"]
